add more integration test